--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
               <p>
                 <a
                   rel="noopener"
-                  href="/assets/cv/CV- Uzoqov Sohibjon.pdf"
+                  href="https://drive.google.com/file/d/1Z1oVIfgFb6p2hRWEteHDOGgeqyqnXgcf/view?usp=sharing"
                   target="_blank"
                   ><button class="show-all">Download CV</button></a
                 >
